--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -79,4 +79,14 @@
     <link rel="stylesheet" href="{{ "css/vendors/highlight/github-gist.css"| absURL }}">
   {{ end }}
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138697151-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-138697151-2');
+  </script>
+
 </head>
