edit document 'linux MAR & GPT'  & add disqus comment

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -67,6 +67,10 @@
           </div>
 
           <!-- /.Prev & Next -->
+          
+          <div class="disqus markdown">
+            {{ partial "disqus.html" . }}
+          </div>
 
         </div>
         <!-- /.Spied element -->
